2009-05-22  Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>

	* config/tc-i386.c (process_drex): Delete. Remove SSE5 support.
	(build_modrm_byte): Remove DREX handling support.
	(DREX_*): Delete.
	(drex_byte): Delete.
	(md_assemble): Remove DREX handling support.
	(process_operands): Remove DREX, SSE5 support.
	(i386_insn): Remove DREX.
	
2009-05-22  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2009-05-20  Kai Tietz  <kai.tietz@onevision.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-coff.h: Include "coff/x86_64.h" for x86 pe-coff.
	(TARGET_FORMAT): Removed for x86 pe-coff.
	(COFF_TARGET_FORMAT): Likewise.

	* config/tc-i386.c (md_longopts): Allow --64 for x86 pe-coff.
	(md_parse_option): Likewise.
	(md_show_usage): Show option --32/--64 for x86 pe-coff.
	(i386_target_format): Use also for x86 pe-coff.

	* config/tc-i386.h (TARGET_FORMAT): Defined as i386_target_format
	for x86 pe-coff.

2009-05-19  DJ Delorie  <dj@redhat.com>

	* config/tc-mep.c (mep_machine): Only check CPU flags, not COP flags.
	(mep_process_saved_insns): Remove debugging printfs.

2009-05-19  Dave Korn  <dave.korn.cygwin@gmail.com>

	* NEWS:  Mention new feature.
	* config/obj-coff.c (obj_coff_common_parse):  New function.
	(obj_coff_comm):  Likewise.
	(coff_pseudo_table):  Override default ".comm" definition on PE.
	* doc/as.texinfo:  Document new feature.

2009-05-17  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff.c (obj_coff_section): Add 'y' as
	specifier for SEC_COFF_NOREAD section flag.
	* doc/as.texinfo: Add documentation about .section flag 'y'.

2009-05-13  DJ Delorie  <dj@redhat.com>

	* cgen.c (gas_cgen_parse_operand): Guard against NULL pointers.

2009-05-13  Andrew Jenner  <andrew@codesourcery.com>

	* config/tc-arm.c: Move as.h to start of file.

2009-05-05 Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/tc-arm.h: Fix typo in comment.
	(ARM_IS_FUNC): New macro.